css/main.css
/*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: absolute;
    width: 100%;
    top: 0;
    left: 0;
}

.main-logo img {
    padding: 37px 12px 0 12px;
    width: 218px;
    height: 32px;
}

nav a img {
    height: 34px;
    padding-right: 12px;
    padding-top: 37px;
}

.main-hero {
    background: center / cover no-repeat url("../img/top-bg.png");
    z-index: -1;
    height: 460px;
    width: 100%;
}

.main-hero .main-product {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-top: 75px;
}

.main-product-img {
    height: 464px;
    position: relative;
    right: 70px;
}

.join-now-text-image {
    height: 22px;
    position: relative;
    bottom: 8px;
    right: 13px;
}
.main-special-offer {
    display: flex;
    justify-content: flex-end;
    position: relative;
    left: 77px;
    top: 34px;
    z-index: 1;
    color: #222;
}

.main-special-offer span {
    color: #ff424b;
}

.main-product .join-now-arrow {
    height: 69px;
}

.bottom-hero-img {
    height: 81px;
    position: relative;
    bottom: 67px;
    left: 107px;
    z-index: -1;
}

.main-cta {
    background: center / cover no-repeat url("../img/ptl-coconut-bg.png");
    width: 100%;
    height: auto;
    margin-top: 186px;
    display: flex;
    align-items: center;
    flex-direction: column;
    padding-bottom: 23px;
}

.main-cta .natural-img {
    padding-top: 35px;
    width: 100%;
    max-width: 345px;
    height: auto;
}

.feature-list {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 462px;
    padding-top: 30px;
    flex-wrap: wrap;
}

.feature {
    display: flex;
    align-items: center;
    padding: 16px 0;
}

.feature .feature-img {
    height: 18px;
    width: 18px;
}

.feature-img:first-child {
    padding-left: 12px;
}

.feature p:last-child {
    padding-right: 12px;
}

.feature p {
    color: white;
    text-transform: uppercase;
    margin: 0;
    font-family: montserratbold;
    position: relative;
    left: 3px;
    font-size: 14px;
    white-space: nowrap;
}

.feature-text {
    font-family: "Open Sans";
    font-weight: 400;
    font-size: 16px;
    color: white;
    text-align: center;
    line-height: 28px;
    max-width: 378px;
    margin: 0;
    padding-bottom: 27px;
}

.cta-button {
    width: 380px;
    height: 54px;
    border-radius: 3px;
    background-color: #ffcd04;
    color: #000;
    text-transform: uppercase;
    font-family: "montserratextrabold";
    font-size: 20px;
    font-weight: 400;
    margin-bottom: -47px;
}

.main-facts {
    margin-top: 63px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.main-facts .available-store-img {
    max-width: 200px;
    height: auto;
}

.main-facts .sub-title {
    color: #999999;
    font-family: "Open Sans";
    font-size: 14px;
    font-weight: 400;
    padding-top: 7px;
}

.main-facts .description {
    max-width: 495px;
    color: #222222;
    font-family: montserratbold;
    font-size: 30px;
    font-weight: 700;
    line-height: 45px;
    text-align: center;
    margin: 0;
}

.carousel {
    padding-top: 54px;
    width: 90%;
    margin:0px auto;
}

.carousel .fact-container {
    height: 274px;
    box-shadow: 0 4px 0 #44bfff, 0 0 35px 15px rgba(34, 34, 34, 0.05);
    background-color: #ffffff;
    border-bottom: 3px solid #35baf1;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.carousel .fact-container img {
    width: 188px;
    height: 176px;
    margin-top: -18px;
}

.carousel .fact-container p {
    max-width: 263px;
    margin: 0 auto;
    color: #222222;
    font-family: montserratbold;
    font-size: 20px;
    font-weight: 700;
    text-align: center;
    padding-top: 22px;
}

.fact-description {
    max-width: 757px;
    margin: 0 auto;
    color: #333333;
    font-family: "Open Sans";
    font-size: 16px;
    font-weight: 400;
    line-height: 30px;
    text-align: center;
    margin: 0;
    padding-top: 69px;
    padding-left: 25px;
    padding-right: 25px;
}

.slick-track {
    overflow: initial;
}

.slick-list {
    overflow: initial;
}

.slick-prev, .slick-next {
    z-index: 100;
    height: 21px;
    width: 12px;
    background: #fff;
    border-radius: 50%;
    box-shadow: 0 0 35px 15px rgba(34, 34, 34, 0.05);
    padding: 21px;
    margin: 21px;
}


/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap; /* 1 */
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
    white-space: inherit;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   https://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important; /* Black prints faster */
        -webkit-box-shadow: none !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre {
        white-space: pre-wrap !important;
    }
    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

